Refactor menu buttons to share more code

--- a/assets/configuration.yaml
+++ b/assets/configuration.yaml
@@ -9,5 +9,5 @@ keybinds:
     "W": "walkForward"
     "Enter": "chat"
 clientUUID: 1
-playerName: "Sam"
-language: "Deutsch"
+playerName: "ellie"
+language: "English"
