--- a/assets/map/overworld.yaml
+++ b/assets/map/overworld.yaml
@@ -1,30 +1,35 @@
 ident: "overworld"
 index: 0
 triggers:
-  - type: "Collision"
-    x: 352
-    y: 240
-    width: 128
-    height: 64
-    idx: -1
-  - type: "Collision"
-    x: 318
-    y: 240
-    width: 18
-    height: 64
-    idx: -1
-  - type: "Collision"
-    x: 336
-    y: 260
-    width: 16
-    height: 44
-    idx: -1
-  - type: "Teleport"
-    x: 336
-    y: 240
-    width: 16
-    height: 20
-    idx: 1
+- type: "Collision"
+  x: 352
+  y: 240
+  width: 128
+  height: 64
+  idx: -1
+- type: "Collision"
+  x: 318
+  y: 240
+  width: 18
+  height: 64
+  idx: -1
+- type: "Collision"
+  x: 336
+  y: 260
+  width: 16
+  height: 44
+  idx: -1
+- type: "Teleport"
+  x: 336
+  y: 240
+  width: 16
+  height: 20
+  idx: 1
 teleports:
   - map: 1
     target: 0
+actors:
+  "joey":
+    texture: "youngster"
+    index: 0
+    script: []
