--- a/assets/map/overworld.yaml
+++ b/assets/map/overworld.yaml
@@ -43,6 +43,12 @@ triggers:
   width: 88
   height: 48
   idx: 0
+- type: "Collision"
+  x: 191
+  y: 526
+  width: 66
+  height: 61
+  idx: -1
 teleports:
   - map: 1
     target: 0
@@ -56,4 +62,9 @@ actors:
     index: 0
     x: 0
     y: 0
-    script: []
+    script:
+      - "joey"
+      - "title joey"
+      - "dialog 2"
+      - "title player"
+      - "dialog 1"
