--- a/assets/map/overworld.yaml
+++ b/assets/map/overworld.yaml
@@ -49,6 +49,12 @@ triggers:
   width: 66
   height: 61
   idx: -1
+- type: "Actor"
+  x: 453
+  y: 64
+  width: 31
+  height: 74
+  idx: 0
 teleports:
   - map: 1
     target: 0
@@ -60,11 +66,12 @@ actors:
   "joey":
     texture: "youngster"
     index: 0
-    x: 0
-    y: 0
+    x: 451
+    y: 137
     script:
       - "joey"
       - "title joey"
       - "dialog 2"
       - "title player"
       - "dialog 1"
+      - "disable trigger"
