added collision and teleport to map

--- a/assets/map/overworld.yaml
+++ b/assets/map/overworld.yaml
@@ -2,79 +2,321 @@ ident: "overworld"
 index: 0
 triggers:
 - type: "Collision"
+  x: 3
+  y: 98
+  width: 509
+  height: 10
+  idx: -1
+- type: "Collision"
+  x: 502
+  y: 106
+  width: 9
+  height: 473
+  idx: -1
+- type: "Collision"
+  x: 345
+  y: 566
+  width: 160
+  height: 14
+  idx: -1
+- type: "Collision"
+  x: 345
+  y: 578
+  width: 9
+  height: 249
+  idx: -1
+- type: "Collision"
   x: 352
-  y: 240
-  width: 128
-  height: 64
+  y: 813
+  width: 157
+  height: 12
   idx: -1
 - type: "Collision"
-  x: 318
-  y: 240
-  width: 18
-  height: 64
+  x: 504
+  y: 815
+  width: 8
+  height: 94
   idx: -1
 - type: "Collision"
-  x: 336
-  y: 260
-  width: 16
-  height: 44
+  x: 0
+  y: 896
+  width: 503
+  height: 11
   idx: -1
-- type: "Teleport"
-  x: 336
-  y: 240
-  width: 16
-  height: 20
-  idx: 1
-- type: "Teleport"
-  x: 67
-  y: 606
-  width: 77
-  height: 32
-  idx: 1
-- type: "Teleport"
-  x: 273
-  y: 764
+- type: "Collision"
+  x: 0
+  y: 732
+  width: 241
+  height: 11
+  idx: -1
+- type: "Collision"
+  x: 234
+  y: 567
+  width: 6
+  height: 174
+  idx: -1
+- type: "Collision"
+  x: 2
+  y: 569
+  width: 237
+  height: 10
+  idx: -1
+- type: "Collision"
+  x: 2
+  y: 433
+  width: 9
+  height: 144
+  idx: -1
+- type: "Collision"
+  x: 1
+  y: 423
+  width: 52
+  height: 11
+  idx: -1
+- type: "Collision"
+  x: 34
+  y: 370
+  width: 14
+  height: 55
+  idx: -1
+- type: "Collision"
+  x: 1
+  y: 101
+  width: 8
+  height: 157
+  idx: -1
+- type: "Collision"
+  x: 1
+  y: 258
   width: 46
-  height: 39
-  idx: 2
-- type: "Teleport"
-  x: 528
-  y: 280
-  width: 88
-  height: 48
-  idx: 0
+  height: 9
+  idx: -1
 - type: "Collision"
-  x: 191
-  y: 526
-  width: 66
+  x: 34
+  y: 258
+  width: 13
+  height: 79
+  idx: -1
+- type: "Collision"
+  x: 2
+  y: 270
+  width: 33
+  height: 42
+  idx: -1
+- type: "Collision"
+  x: 1
+  y: 389
+  width: 35
+  height: 33
+  idx: -1
+- type: "Collision"
+  x: 0
+  y: 308
+  width: 20
+  height: 114
+  idx: -1
+- type: "Collision"
+  x: 133
+  y: 245
+  width: 7
+  height: 63
+  idx: -1
+- type: "Collision"
+  x: 140
+  y: 296
+  width: 97
+  height: 13
+  idx: -1
+- type: "Collision"
+  x: 230
+  y: 213
+  width: 7
+  height: 96
+  idx: -1
+- type: "Collision"
+  x: 196
+  y: 213
+  width: 41
+  height: 13
+  idx: -1
+- type: "Collision"
+  x: 347
+  y: 177
+  width: 6
+  height: 109
+  idx: -1
+- type: "Collision"
+  x: 132
+  y: 233
+  width: 65
+  height: 11
+  idx: -1
+- type: "Collision"
+  x: 179
+  y: 182
+  width: 17
+  height: 51
+  idx: -1
+- type: "Collision"
+  x: 165
+  y: 183
+  width: 13
+  height: 5
+  idx: -1
+- type: "Collision"
+  x: 136
+  y: 182
+  width: 9
+  height: 2
+  idx: -1
+- type: "Collision"
+  x: 133
+  y: 182
+  width: 6
+  height: 53
+  idx: -1
+- type: "Collision"
+  x: 346
+  y: 276
+  width: 128
+  height: 11
+  idx: -1
+- type: "Collision"
+  x: 464
+  y: 176
+  width: 10
+  height: 110
+  idx: -1
+- type: "Collision"
+  x: 345
+  y: 354
+  width: 12
+  height: 10
+  idx: -1
+- type: "Collision"
+  x: 344
+  y: 364
+  width: 15
   height: 61
   idx: -1
-- type: "Actor"
-  x: 453
-  y: 64
-  width: 31
-  height: 74
+- type: "Collision"
+  x: 359
+  y: 414
+  width: 66
+  height: 11
+  idx: -1
+- type: "Collision"
+  x: 411
+  y: 355
+  width: 13
+  height: 59
+  idx: -1
+- type: "Collision"
+  x: 119
+  y: 395
+  width: 13
+  height: 64
+  idx: -1
+- type: "Collision"
+  x: 163
+  y: 396
+  width: 17
+  height: 62
+  idx: -1
+- type: "Collision"
+  x: 130
+  y: 445
+  width: 50
+  height: 14
+  idx: -1
+- type: "Collision"
+  x: 149
+  y: 397
+  width: 14
+  height: 5
+  idx: -1
+- type: "Collision"
+  x: 149
+  y: 397
+  width: 3
+  height: 23
+  idx: -1
+- type: "Teleport"
+  x: 380
+  y: 179
+  width: 14
+  height: 18
   idx: 0
+- type: "Teleport"
+  x: 134
+  y: 396
+  width: 14
+  height: 18
+  idx: 1
+- type: "Teleport"
+  x: 378
+  y: 356
+  width: 14
+  height: 8
+  idx: 2
+- type: "Collision"
+  x: 350
+  y: 175
+  width: 25
+  height: 6
+  idx: -1
+- type: "Collision"
+  x: 399
+  y: 175
+  width: 67
+  height: 6
+  idx: -1
+- type: "Collision"
+  x: 169
+  y: 182
+  width: 13
+  height: 3
+  idx: -1
+- type: "Teleport"
+  x: 149
+  y: 182
+  width: 16
+  height: 19
+  idx: 3
+- type: "Collision"
+  x: 397
+  y: 354
+  width: 15
+  height: 5
+  idx: -1
+- type: "Collision"
+  x: 356
+  y: 353
+  width: 17
+  height: 6
+  idx: -1
 teleports:
-  - map: 1
-    target: 0
-  - map: 0
-    target: 2
-  - map: 0
-    target: 1
+- map: 3
+  target: 0
+- map: 2
+  target: 0
+- map: 4
+  target: 0
+- map: 5
+  target: 0
 actors:
   "joey":
     texture: "youngster"
     index: 0
-    x: 451
-    y: 137
+    x: 315
+    y: 882
     script:
-      - "joey"
-      - "title joey"
-      - "dialog 2"
-      - "title player"
-      - "dialog 1"
-      - "title joey"
-      - "dialog 1"
-      - "battle joey"
-      - "disable trigger"
+    - "joey"
+    - "title joey"
+    - "dialog 2"
+    - "title player"
+    - "dialog 1"
+    - "title joey"
+    - "dialog 1"
+    - "battle joey"
+    - "disable trigger"
