--- a/assets/map/house_Protagonist_2F.yaml
+++ b/assets/map/house_Protagonist_2F.yaml
@@ -50,31 +50,65 @@ triggers:
   height: 4
   idx: -1
 - type: "Collision"
-  x: 111
-  y: 96
-  width: 18
-  height: 28
-  idx: -1
-- type: "Collision"
   x: 127
   y: 104
   width: 34
   height: 3
   idx: -1
 - type: "Collision"
-  x: 130
-  y: 98
-  width: 14
-  height: 14
+  x: 158
+  y: 46
+  width: 21
+  height: 26
   idx: -1
 - type: "Collision"
-  x: 157
-  y: 99
-  width: 35
-  height: 18
+  x: 188
+  y: 89
+  width: 5
+  height: 13
   idx: -1
 teleports:
 - map: 2
   target: 1
-actors: {}
+actors:
+  "tv":
+    texture: "actor_size"
+    index: 0
+    x: 112
+    y: 104
+    script:
+      - "tv"
+      - "dialog 1"
+  "gc":
+    texture: "actor_size"
+    index: 1
+    x: 130
+    y: 98
+    script:
+      - "gc"
+      - "dialog 1"
+  "book":
+    texture: "actor_size"
+    index: 2
+    x: 158
+    y: 103
+    script:
+      - "book"
+      - "dialog 1"
+  "pc":
+    texture: "actor_size"
+    index: 3
+    x: 175
+    y: 107
+    script:
+      - "pcY"
+      - "dialog 1"
+  "bed":
+    texture: "actor_size"
+    index: 4
+    x: 160
+    y: 61
+    script:
+      - "bedY"
+      - "dialog 2"
 wildEncounters: []
