--- a/assets/map/lab_oak.yaml
+++ b/assets/map/lab_oak.yaml
@@ -44,18 +44,6 @@ triggers:
   height: 30
   idx: -1
 - type: "Collision"
-  x: 10
-  y: 65
-  width: 85
-  height: 30
-  idx: -1
-- type: "Collision"
-  x: 145
-  y: 126
-  width: 46
-  height: 23
-  idx: -1
-- type: "Collision"
   x: 161
   y: 177
   width: 62
@@ -103,6 +91,50 @@ triggers:
   width: 86
   height: 2
   idx: -1
+- type: "Collision"
+  x: 145
+  y: 131
+  width: 46
+  height: 17
+  idx: -1
+- type: "Collision"
+  x: 16
+  y: 71
+  width: 79
+  height: 23
+  idx: -1
 teleports: []
-actors: {}
+actors:
+  "machine":
+    texture: "actor_size"
+    index: 0
+    x: 40
+    y: 119
+    script:
+      - "machine"
+      - "dialog 2"
+  "pc":
+    texture: "actor_size"
+    index: 1
+    x: 48
+    y: 184
+    script:
+      - "pc"
+      - "dialog 1"
+  "books":
+    texture: "actor_size"
+    index: 2
+    x: 112
+    y: 188
+    script:
+      - "books"
+      - "dialog 1"
+  "books_2":
+    texture: "actor_size"
+    index: 3
+    x: 129
+    y: 188
+    script:
+      - "books"
+      - "dialog 1"
 wildEncounters: []
