--- a/assets/map/school.yaml
+++ b/assets/map/school.yaml
@@ -56,12 +56,6 @@ triggers:
   height: 8
   idx: -1
 - type: "Collision"
-  x: 67
-  y: 132
-  width: 65
-  height: 13
-  idx: -1
-- type: "Collision"
   x: 50
   y: 139
   width: 16
@@ -157,8 +151,70 @@ triggers:
   width: 7
   height: 8
   idx: -1
+- type: "Collision"
+  x: 68
+  y: 146
+  width: 65
+  height: 16
+  idx: -1
 teleports:
 - map: 0
   target: 2
-actors: {}
+actors:
+  "teacher":
+    texture: "actor_size"
+    index: 0
+    x: 85
+    y: 121
+    script:
+      - "teacher"
+      - "dialog 2"
+  "kid_TL":
+    texture: "actor_size"
+    index: 1
+    x: 53
+    y: 68
+    script:
+      - "kid_TL"
+      - "dialog 1"
+  "kid_BL":
+    texture: "actor_size"
+    index: 2
+    x: 53
+    y: 38
+    script:
+      - "kid_BL"
+      - "dialog 1"
+  "kid_BR":
+    texture: "actor_size"
+    index: 3
+    x: 163
+    y: 37
+    script:
+      - "kid_BR"
+      - "dialog 1"
+  "twin_left":
+    texture: "actor_size"
+    index: 4
+    x: 131
+    y: 69
+    script:
+      - "twins"
+      - "dialog 1"
+  "twin_right":
+    texture: "actor_size"
+    index: 5
+    x: 149
+    y: 69
+    script:
+      - "twins"
+      - "dialog 1"
+  "board":
+    texture: "actor_size"
+    index: 6
+    x: 111
+    y: 147
+    script:
+      - "board"
+      - "dialog 3"
 wildEncounters: []
