--- a/assets/map/overworld.yaml
+++ b/assets/map/overworld.yaml
@@ -248,12 +248,6 @@ triggers:
   height: 128
   idx: 0
 - type: "WildEncounter"
-  x: 348
-  y: 828
-  width: 103
-  height: 65
-  idx: 0
-- type: "WildEncounter"
   x: 127
   y: 743
   width: 103
@@ -349,6 +343,18 @@ triggers:
   width: 15
   height: 149
   idx: 4
+- type: "Actor"
+  x: 95
+  y: 745
+  width: 13
+  height: 131
+  idx: 0
+- type: "WildEncounter"
+  x: 346
+  y: 827
+  width: 106
+  height: 66
+  idx: 1
 teleports:
 - map: 3
   target: 0
@@ -364,8 +370,8 @@ actors:
   "joey":
     texture: "youngster"
     index: 0
-    x: 1
-    y: 395
+    x: 92
+    y: 877
     script:
     - "joey"
     - "title joey"
@@ -425,5 +431,32 @@ wildEncounters:
     moveIds:
     - "quickattack"
     - "thundershock"
+    uuid: -1
+    battleState: null
+- - speciesId: "snivy"
+    nickname: null
+    level: 12
+    exp: 0
+    moveIds:
+    - "vinewhip"
+    - "leaftornado"
+    uuid: -1
+    battleState: null
+  - speciesId: "pikachu"
+    nickname: null
+    level: 10
+    exp: 0
+    moveIds:
+    - "quickattack"
+    - "thundershock"
+    uuid: -1
+    battleState: null
+  - speciesId: "charizard"
+    nickname: null
+    level: 40
+    exp: 0
+    moveIds:
+    - "heatwave"
+    - "fire fang"
     uuid: -1
     battleState: null
