--- a/assets/map/house_Protagonist_2F.yaml
+++ b/assets/map/house_Protagonist_2F.yaml
@@ -32,24 +32,6 @@ triggers:
   height: 3
   idx: -1
 - type: "Collision"
-  x: 82
-  y: 107
-  width: 5
-  height: 18
-  idx: -1
-- type: "Collision"
-  x: 58
-  y: 105
-  width: 3
-  height: 24
-  idx: -1
-- type: "Collision"
-  x: 61
-  y: 125
-  width: 26
-  height: 4
-  idx: -1
-- type: "Collision"
   x: 127
   y: 104
   width: 34
@@ -67,6 +49,12 @@ triggers:
   width: 5
   height: 13
   idx: -1
+- type: "Teleport"
+  x: 63
+  y: 105
+  width: 18
+  height: 18
+  idx: 0
 teleports:
 - map: 2
   target: 1
